refactor: use List.of for managed policies in EC2 SSM role.